--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         width: 100wh;
         display: flex;
         flex-direction: column;
-        padding: 15px 100px;
+        padding: 15px 150px;
     }
 
     .sidebar {
@@ -126,7 +126,7 @@
             </button>
             <button class="tablink" onclick="openTab(event, 'industry')">
                 <i class="bi bi-stack"></i>
-                Phân tích ngành
+                Ngành
             </button>
             <button class="tablink" onclick="openTab(event, 'market')">
                 <i class="bi bi-graph-up-arrow"></i>
