--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         width: 100wh;
         display: flex;
         flex-direction: column;
-        padding: 15px 150px;
+        padding: 10px 150px;
     }
 
     .sidebar {
@@ -152,11 +152,11 @@
                     NHInvest
                 </span> -->
             </div>
-            <button class="tablink" onclick="openTab(event, 'market')">
+            <button class="tablink active" onclick="openTab(event, 'market')">
                 <i class="bi bi-graph-up-arrow"></i>
                 Thị trường
             </button>
-            <button class="tablink active" onclick="openTab(event, 'stock')">
+            <button class="tablink" onclick="openTab(event, 'stock')">
                 <i class="bi bi-coin"></i>
                 Chứng khoán
             </button>
